crates/uitest/fixtures/parser/fn_missing_parameters.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/fn_missing_parameters.fe
---
error[1-0001]: expected function parameter list
  ┌─ fn_missing_parameters.fe:1:7
  │
1 │ fn foo -> u8 {}
  │       ^ expected `(`

error[1-0001]: expected function parameter list
  ┌─ fn_missing_parameters.fe:3:7
  │
3 │ fn bar {
  │       ^ expected `(`

error[1-0001]: expected function parameter list
  ┌─ fn_missing_parameters.fe:6:7
  │
6 │ fn baz -> u8 {}
  │       ^ expected `(`

error[1-0001]: expected function parameter list
  ┌─ fn_missing_parameters.fe:8:8
  │
8 │ fn f<T> where T: U {}
  │        ^ expected `(`


